hphp/hack/test/typecheck/reactive/foreach_in_rx2.php.exp
File "foreach_in_rx2.php", line 6, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
