hphp/hack/test/typecheck/reactive/foreach_in_rx2.php
<?hh // strict

<<__Rx>>
function f1(Traversable<int> $a): void {
  // ERROR: non rx-traversable
  foreach ($a as $c) {
  }
}
